apps/structurizr/k8s/bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: structurizr
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: structurizr-bridge
  namespace: default
  labels:
    kubernetes.io/service-name: structurizr
addressType: IPv4
ports:
  - name: http
    port: 18080
    protocol: TCP
endpoints:
  - addresses:
      - 172.20.0.1
    conditions:
      ready: true
