apps/structurizr/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: structurizr
  namespace: structurizr
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - structurizr.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: structurizr
          port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: oauth2-proxy
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: secure-headers
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit-default
